--- a/src/main/resources/templates/post-list.html
+++ b/src/main/resources/templates/post-list.html
@@ -6,11 +6,11 @@
 
   <!--my-->
   <link rel="stylesheet" type="text/css" href="/css/common.css"/>
+  <link rel="stylesheet" type="text/css" href="/css/button.css"/>
 
   <!--TUI grid-->
   <link rel="stylesheet" type="text/css" href="/lib/bower_components/tui-grid/dist/tui-grid.css"/>
-  <link rel="stylesheet" type="text/css"
-        href="/lib/bower_components/tui-pagination/dist/tui-pagination.css"/>
+  <link rel="stylesheet" type="text/css" href="/lib/bower_components/tui-pagination/dist/tui-pagination.css"/>
 
   <!--auto complete-->
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -76,9 +76,9 @@
                 </div>
               </div>
 
-              <div class="search-btn-box">
-                <div class="action btn-primary" data-action="search">조회</div>
-                <div class="action" data-action="clear">초기화</div>
+              <div class="btn-box">
+                <button type="button" class="search-btn medium-btn action" data-action="search">조회</button>
+                <button type="button" class="etc-btn medium-btn action" data-action="clear">초기화</button>
               </div>
               </form>
 
