--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,5 +1,5 @@
 .card {
-  min-height: 500px;
+  /*min-height: 500px;*/
 }
 
 .input-style {
@@ -25,51 +25,6 @@
   height: 1px;
   background-color: lightgrey;
   margin: 20px 0px;
-}
-
-.search-btn-box {
-  margin-top: 10px;
-  margin-right: 30px;
-}
-
-.search-btn-box div {
-  border-radius: unset;
-  width: 60px;
-  height: 30px;
-  margin-right: 5px;
-  font-size: 15px;
-  background-color: gray;
-  border: 0px;
-  color: white;
-  cursor: Pointer;
-  text-align: center;
-  padding-top: 4px;
-  user-select: none;
-  display: inline-block;
-}
-
-.common-small-btn {
-  font-size: 12px;
-  margin-left: 3px;
-  padding: 1px 6px;
-}
-
-.common-btn {
-  font-size: 15px;
-  margin-left: 5px;
-  padding: 2px 10px;
-}
-
-.search-btn-box div:active {
-  background-color: dimgray;
-}
-
-.search-btn-box .btn-primary {
-  background-color: #4b96e6;
-}
-
-.search-btn-box .btn-primary:active {
-  background-color: #1979e0 !important;
 }
 
 #result-grid {
@@ -150,4 +105,8 @@
   background-color: lightgray;
   border: 0;
   pointer-events: none;
+}
+
+.content {
+  min-height: 800px;
 }
