--- a/src/main/resources/templates/write-post.html
+++ b/src/main/resources/templates/write-post.html
@@ -6,6 +6,7 @@
 
   <!--my-->
   <link rel="stylesheet" type="text/css" href="/css/common.css"/>
+  <link rel="stylesheet" type="text/css" href="/css/button.css"/>
 
   <!--TUI editor-->
   <link rel="stylesheet" href="/lib/bower_components/codemirror/lib/codemirror.css">
@@ -113,7 +114,7 @@
                 <div class="row form-group">
                   <div class="col col-md-2">
                     <label class=" form-control-label">추가 정보</label>
-                    <span data-tooltip-text="고정된 위 항목 외에도 필요한 추가 정보를 해당 포스트와 함께 저장할 수 있습니다. 이 정보는 포스트 조회 시 extraData로 반환됩니다."><i class="fa fa-question-circle"></i></span>
+                   <span data-tooltip-text="고정된 위 항목 외에도 필요한 추가 정보를 해당 포스트와 함께 저장할 수 있습니다. 이 정보는 포스트 조회 시 extraData로 반환됩니다."><i class="fa fa-question-circle"></i></span>
                   </div>
                   <div class="col col-md-10">
                     <div class="form-check">
@@ -124,13 +125,20 @@
                       </div>
                     </div>
                     <div id="extra-data-box" style="display: none">
-                      <a href="javascript:" class="action"><span class="badge badge-primary"  data-action="addRow">+ 추가</span></a>
+                      <!--<a href="javascript:" class="action">-->
+                        <!--<span class="badge badge-primary"  data-action="addRow">+ 추가</span>-->
+                      <!--</a>-->
+                      <div class="btn-box">
+                        <button type="button" class="add-btn small-btn action" data-action="addRow">행 추가</button>
+                      </div>
                       <div id="extra-data-grid" style="width: 450px; margin-top:10px;"></div>
                     </div>
                   </div>
                 </div>
               </form>
-              <button id="save" type="button" class="btn btn-success common-small-btn action" data-action="register">저장</button>
+              <div class="btn-box">
+                <button id="save" type="button" class="save-btn medium-btn action" data-action="register">저장</button>
+              </div>
             </div>
             <!--<div class="card-footer">-->
               <!--<button type="submit" class="btn btn-primary btn-sm action" data-action="register">-->
