front end focus top get tag, category

--- a/src/main/resources/templates/post-list.html
+++ b/src/main/resources/templates/post-list.html
@@ -65,6 +65,15 @@
               </div>
 
               <div class="row form-group">
+                <div class="col col-md-2">
+                  <label for="categories" class=" form-control-label">카테고리</label>
+                </div>
+                <div class="col-12 col-md-10">
+                  <input type="text" id="categories" name="categories" size="50" class="form-control input-style medium-input-style">
+                </div>
+              </div>
+
+              <div class="row form-group">
                 <div class="col col-md-2">상태 </div>
                 <div class="col-12 col-md-10" style="padding-left: 35px;">
                   <span style="margin-right: 30px;">
