--- a/src/main/resources/static/css/button.css
+++ b/src/main/resources/static/css/button.css
@@ -19,7 +19,7 @@
 /* SIZE */
 
 .small-btn {
-  font-size: 12px;
+  font-size: 11px;
   margin-left: 3px;
   padding: 2px 6px;
 }
@@ -28,6 +28,12 @@
   font-size: 14px;
   margin-left: 3px;
   padding: 2px 8px;
+}
+
+.large-btn {
+  font-size: 17px;
+  margin-left: 5px;
+  padding: 3px 10px;
 }
 
 /* COLOR */
@@ -44,6 +50,6 @@
   background-color: darkgreen;
 }
 
-.etc-btn {
+.etc-btn, .cancel-btn {
   background-color: dimgrey;
 }
