--- a/src/main/resources/templates/list-category.html
+++ b/src/main/resources/templates/list-category.html
@@ -117,7 +117,7 @@
 
 <!--Local Stuff-->
 <script src="/js/common.js"></script>
-<script src="/js/category-list.js"></script>
+<script src="/js/list-category.js"></script>
 
 </body>
 </html>
