--- a/src/main/resources/templates/list-post.html
+++ b/src/main/resources/templates/list-post.html
@@ -128,7 +128,7 @@
 <script src="/js/common.js"></script>
 <script src="/js/grid-column.js"></script>
 <script src="/js/jquery-autocomplete.js"></script>
-<script src="/js/post-list.js"></script>
+<script src="/js/list-post.js"></script>
 
 </body>
 </html>
