--- a/src/main/resources/templates/manage-post.html
+++ b/src/main/resources/templates/manage-post.html
@@ -204,7 +204,7 @@
 <script src="/js/common.js"></script>
 <script src="/js/grid-column.js"></script>
 <script src="/js/jquery-autocomplete.js"></script>
-<script src="/js/write-post.js"></script>
+<script src="/js/manage-post.js"></script>
 
 </body>
 </html>
