--- a/src/main/resources/templates/list-post.html
+++ b/src/main/resources/templates/list-post.html
@@ -57,6 +57,15 @@
 
               <div class="row form-group">
                 <div class="col col-md-2">
+                  <label for="categories" class=" form-control-label">카테고리</label>
+                </div>
+                <div class="col-12 col-md-10">
+                  <input type="text" id="categories" name="categories" size="50" class="form-control input-style medium-input-style">
+                </div>
+              </div>
+
+              <div class="row form-group">
+                <div class="col col-md-2">
                   <label for="tags" class=" form-control-label">태그</label>
                 </div>
                 <div class="col-12 col-md-10">
