포스트 조회조건 추가(최신순, 인기순), 포스트 요소 추가(말머리, 대표이미지url)

--- a/src/main/resources/templates/fragment/left-panel.html
+++ b/src/main/resources/templates/fragment/left-panel.html
@@ -66,13 +66,13 @@
 
           <li class="menu-title">관리</li><!-- /.menu-title -->
           <li>
-            <a href="widgets.html"> <i class="menu-icon fa fa-info"></i>기본 정보(미구현) </a>
-          </li>
-          <li>
             <a href="widgets.html"> <i class="menu-icon fa fa-location-arrow"></i>주소(미구현) </a>
           </li>
           <li>
             <a href="widgets.html"> <i class="menu-icon fa fa-upload"></i>자료(미구현) </a>
+          </li>
+          <li th:class="${activeId} == 'setting' ? 'active' : ''">
+            <a href="/admin/setting"> <i class="menu-icon fa fa-info"></i>설정 </a>
           </li>
 
           <!--<li class="menu-item-has-children dropdown">-->
