--- a/src/main/resources/templates/list-post.html
+++ b/src/main/resources/templates/list-post.html
@@ -85,6 +85,16 @@
                 </div>
               </div>
 
+              <div class="row form-group">
+                <div class="col col-md-2">정렬 기준 </div>
+                <div class="col-12 col-md-10">
+                  <input type="radio" name="orderingMethod" value="LASTEST" id="LASTEST" checked="checked" />
+                  <label for="LASTEST">최신순</label>
+                  <input type="radio" name="orderingMethod" value="POPULAR" id="POPULAR" style="margin-left:10px"/>
+                  <label for="POPULAR">인기순</label>
+                </div>
+              </div>
+
               <div class="btn-box">
                 <button type="button" class="search-btn medium-btn action" data-action="search">조회</button>
                 <button type="button" class="etc-btn medium-btn action" data-action="clear">초기화</button>
